server/compilers/goLiteJS/src/test/ml1/invalid/slice7.go
// append with left parenthesis missing
package main

var x []int

func main() {
    x = append x, 3)
}
